[tool.poetry]
name = "throw"
version = "0.1.0"
description = "Transfer data by through a grid of RGB colors."
authors = ["Chris <741258@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
